@@ -23,6 +23,7 @@ New Features:
 - Support for key bindings added and settings expanded.
 - Changed card selection backend to QML and greatly improved card display.
 - Changed Project-Player backend to QML and improved overall look.
+- Project-Player can be paused.
 
 Updated Features:
 - Upgrade to Qt5.14.2 with msvc2017 for more QJSEngine and QML features.
